--- a/hw4-ansible/openstack_heat_assignment1_1.yaml
+++ b/hw4-ansible/openstack_heat_assignment1_1.yaml
@@ -3,8 +3,8 @@ heat_template_version: 2013-05-23
 description: first assignment on heat exercise
 
 resources:
-    instance_port:
-       type: OS::Neutron::Port
+    security_group:
+       type: AWS::Neutron::Port
        properties:
           network_id: a762baf4-452d-4503-8b2f-27a1475942ee
           fixed_ips:
