--- a/cloudmesh_apachestorm/zookeeper-nimbus.yaml
+++ b/cloudmesh_apachestorm/zookeeper-nimbus.yaml
@@ -26,7 +26,7 @@
       - name: download zookeeper
         get_url: url=http://apache.mirrors.pair.com/zookeeper/zookeeper-3.4.6/zookeeper-3.4.6.tar.gz dest=/home/ubuntu/zookeeper.tar.gz mode=0440
       - unarchive: src=/home/ubuntu/zookeeper.tar.gz dest=/home/ubuntu/ copy=no
-      - copy: src=/N/u/oliveral/465-oliverlewis/project/zoo.cfg dest=/home/ubuntu/zookeeper-3.4.6/conf/zoo.cfg mode=0644
+      - copy: src=zoo.cfg dest=/home/ubuntu/zookeeper-3.4.6/conf/zoo.cfg mode=0644
       - name: install java jre
         apt: name=default-jre state=present update_cache=yes
       - command: /home/ubuntu/zookeeper-3.4.6/bin/zkServer.sh start
@@ -40,6 +40,7 @@
     - name: storm release
       get_url: url=http://apache.mirrors.pair.com/storm/apache-storm-0.9.4/apache-storm-0.9.4.tar.gz dest=/home/ubuntu/stormv0.9.4.tar.gz mode=0440
     - unarchive: src=/home/ubuntu/stormv0.9.4.tar.gz dest=/home/ubuntu/ copy=no
+    - copy: src=storm.yaml dest=/home/ubuntu/apache-storm-0.9.4/conf/storm.yaml mode=0644
     - name: install java jre
       apt: name=default-jre state=present update_cache=yes
     - command: /home/ubuntu/apache-storm-0.9.4/bin/storm nimbus
@@ -58,6 +59,7 @@
     - name: storm release
       get_url: url=http://apache.mirrors.pair.com/storm/apache-storm-0.9.4/apache-storm-0.9.4.tar.gz dest=/home/ubuntu/stormv0.9.4.tar.gz mode=0440
     - unarchive: src=/home/ubuntu/stormv0.9.4.tar.gz dest=/home/ubuntu/ copy=no
+    - copy: src=storm.yaml dest=/home/ubuntu/apache-storm-0.9.4/conf/storm.yaml mode=0644
     - name: install java jre
       apt: name=default-jre state=present update_cache=yes
     - command: /home/ubuntu/apache-storm-0.9.4/bin/storm supervisor
